--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  htjb
 
 # Build settings
-theme: jekyll-theme-hyde
+theme: jekyll-theme-minimal
 plugins:
   - jekyll-feed
 
