--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Harry T. J. Bevins
+subtitle: PhD student
 email: htjb2@cam.ac.uk
 description: >- # this means to ignore newlines until "baseurl:"
   Personal pages
